[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = ["cryptography", "encoding", "algorithms"]
description = "A Rust library that implements the MD5 cryptographic hash function"
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["md5", "mdg", "digest", "encryption", "hash"]
license = "MIT OR Apache-2.0"
name = "mdg"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/mdg/"
rust-version = "1.67"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "mdg"
harness = false
path = "benches/mdg.rs"

[dependencies]
claims = { path = "../claims" }
cjwt = { path = "../cjwt" }

[dev-dependencies]
criterion = "0.4.0"

[lib]
name = "mdg"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
