[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = ["cryptography", "encoding", "algorithms"]
description = "A Rust library that implements the MD5 cryptographic hash function"
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["md5", "mdg", "digest", "encryption", "hash"]
license = "MIT OR Apache-2.0"
name = "mdg"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/mdg/"
rust-version = "1.67"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "mdg"
harness = false
path = "benches/mdg.rs"

[dependencies]
cjwt = "0.0.1"

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "mdg"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
