[package]
name = "mini-functions-date"
version = "0.0.1"
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
description = "Date is a struct that provides an easy way to get the current date and time in multiple formats."
include = [
    "/build.rs",
    "/Cargo.toml",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/examples/**",
]

[dependencies]
time = "0.3.17"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[features]
default = []
