[package]
name = "mini-functions-hash"
version = "0.0.8"
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
description = "Hash is a struct that provides an easy way to hash and verify passwords using the [blake3](https://crates.io/crates/blake3) crate."
include = [
    # "/build.rs",
    "/Cargo.toml",
    # "/LICENSE-APACHE",
    # "/LICENSE-MIT",
    # "/README.md",
    "/src/**",
    "/tests/**",
    "/examples/**",
]

[dependencies]
mini-functions = { path = "../mini-functions" }
blake3 = "1.3.3"

[lib]
path = "src/lib.rs"

[features]
default = []
