[package]
name = "mini-functions-jwt"
version = "0.0.1"
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
description = "JWT provides a set of utility functions for working with JSON Web Tokens (JWTs) and JSON Web Signatures (JWSs)."
include = [
    # "/build.rs",
    "/Cargo.toml",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/examples/**",
]

[dependencies]
mini-functions-date = { path = "../mini-functions-date" }
mini-functions-jwt-claims = { path = "../mini-functions-jwt-claims" }
mini-functions-jwt-errors = { path = "../mini-functions-jwt-errors" }
base64 = "0.21.0"
jwt = "0.16.0"
jsonwebtoken = "8.2.0"
openssl = "0.10.45"
serde_derive = "1.0.152"
sha2 = "0.10.6"
hmac = "0.12.1"
serde = "1.0.152"
serde_json = "1.0.91"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[features]
default = []
