[package]
name = "mini-functions-jwt"
version = "0.0.1"
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
description = "JWT provides a set of utility functions for working with JSON Web Tokens (JWTs) and JSON Web Signatures (JWSs)."
include = [
    # "/build.rs",
    "/Cargo.toml",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/examples/**",
]

[dependencies]
date = { path = "../date" }
mini-functions-jwt-claims = { path = "../mini-functions-jwt-claims" }
mini-functions-jwt-errors = { path = "../mini-functions-jwt-errors" }
base64 = "0.21.0"
jwt = "0.16.0"
jsonwebtoken = "8.2.0"
# openssl = "0.10.45"
serde_derive = "1.0.152"
sha2 = "0.10.6"
hmac = "0.12.1"
serde = "1.0.152"
serde_json = "1.0.91"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

# [profile.dev]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# panic = 'unwind'
# rpath = false
# strip = false

# [profile.release]
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# debug = false # Disable debug information
# debug-assertions = false # Disable debug assertions
# incremental = false # Disable incremental compilation
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# overflow-checks = false # Disable overflow checks
# panic = "abort" # Strip expensive panic clean-up logic
# rpath = false # Disable rpath
# strip = "symbols"  # Automatically strip symbols from the binary.

# [profile.test]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# rpath = false
# strip = false