[package]
authors = ["Sebastien Rousseau"]
categories = ["development-tools"]
description = "Highly Performant Utility And Wrapper Functions Library For Rust"
documentation = "https://docs.rs/mini-functions"
edition = "2021"
homepage = "https://minifunctions.com"
keywords = ["functions"]
license = "Apache-2.0 OR MIT"
name = "mini-functions"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/mini-functions.git"
resolver = "1"
rust-version = "1.57.0"
version = "0.0.8"

# [features]
# default = []


# [package.metadata.docs.rs]
# all-features = true
# default-target = "x86_64-unknown-linux-gnu"
# rustdoc-args = ["--cfg", "docsrs"]
# targets = [
#     "x86_64-unknown-linux-gnu",
#     "aarch64-unknown-linux-gnu",
#     "x86_64-pc-windows-gnu",
#     "x86_64-pc-windows-msvc",
#     "x86_64-apple-darwin",
#     "aarch64-apple-darwin"
# ]

# [targets.x86_64-unknown-linux-gnu]
# image = "ubuntu:latest"

# [targets.aarch64-unknown-linux-gnu]
# image = "arm64v8/ubuntu:latest"

# [targets.x86_64-pc-windows-gnu]
# image = "mcr.microsoft.com/windows/servercore:ltsc2019"

# [targets.x86_64-pc-windows-msvc]
# image = "mcr.microsoft.com/windows/servercore:ltsc2019"

# [targets.x86_64-apple-darwin]
# image = "darwin:latest"

# [targets.aarch64-apple-darwin]
# image = "arm64v8/darwin:latest"