[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = [
    "Authentication",
    "Cryptography",
    "Development tools",
    "WebAssembly",
    "Webprogramming",
]
description = "`Claims` is a struct that holds the claims defined in the RFC 7519, encoded as JSON object in JWS/JWE, allowing digital signing/integrity protection and/or encryption."
edition = "2018"
homepage = "https://minifunctions.com/"
keywords = [
    "authentication",
    "authorization",
    "claims",
    "jwt",
    "mini-functions",
    "security",
    "token",
    "web",
]
license = "MIT OR Apache-2.0"
name = "password"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/claims/"
rust-version = "1.66.1"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "password"
harness = false
path = "benches/password.rs"

[dependencies]
common = { path = "../common" }
date = { path = "../date" }
hash = { path = "../hash" }
random = { path = "../random" }
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.91"

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "password"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

# [profile.dev]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# panic = 'unwind'
# rpath = false
# strip = false

# [profile.release]
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# debug = false # Disable debug information
# debug-assertions = false # Disable debug assertions
# incremental = false # Disable incremental compilation
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# overflow-checks = false # Disable overflow checks
# panic = "abort" # Strip expensive panic clean-up logic
# rpath = false # Disable rpath
# strip = "symbols"  # Automatically strip symbols from the binary.

# [profile.test]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# rpath = false
# strip = false
