[package]
name = "qrc"
edition = "2018"
rust-version = "1.66.1"
version = "0.0.2"
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
description = "A Rust library for generating and manipulating QR code images in various formats"
homepage = "https://minifunctions.com/"
keywords = ["barcode", "mini-functions", "qr", "qrc", "qrcode"]
categories = ["Algorithms", "Encoding", "Images", "Rendering", "Visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/qrc/"
[package.metadata.docs.rs]
all-features = true

[dependencies]
image = "0.24.5"

[dependencies.qrcode]
version = "0.12.0"
features = ["svg"]
optional = false
default-features = false

[dev-dependencies]
criterion = "0.4.0"

[features]
default = []

[lib]
path = "src/lib.rs"
name = "qrc"
plugin = false
proc-macro = false
crate-type = ["lib"]
required-features = []

[[bench]]
path = "benches/qrc.rs"
name = "qrc"
plugin = false
proc-macro = false
harness = false
required-features = []

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
