[package]
name = "qrc"
edition = "2021"
rust-version = "1.66.1"
version = "0.0.2"
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
description = "A Rust library for generating and manipulating QR code images in various formats"
homepage = "https://minifunctions.com/"
keywords = ["barcode", "mini-functions", "qr", "qrc", "qrcode"]
categories = ["Algorithms", "Encoding", "Images", "Rendering", "Visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/qrc/"
[package.metadata.docs.rs]
all-features = true

[dependencies]
image = "0.24.7"

[dependencies.qrcode]
version = "0.12.0"
features = ["svg"]
optional = false
default-features = false

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []

[lib]
path = "src/lib.rs"
name = "qrc"
plugin = false
proc-macro = false
crate-type = ["lib"]
required-features = []

[[bench]]
path = "benches/qrc.rs"
name = "qrc"
plugin = false
proc-macro = false
harness = false
required-features = []
