[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = [
    "Algorithms",
    "Cryptography",
    "Development Tools",
    "Encoding",
    "Security",
]
description = "A Rust library for generating random and pseudo-random numbers based on the Mersenne Twister algorithm"
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["entropy", "vrd", "rand", "random-number", "random"]
license = "MIT OR Apache-2.0"
name = "vrd"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/vrd/"
rust-version = "1.66.1"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "vrd"
harness = false
path = "benches/vrd.rs"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "vrd"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
