[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
description = "Criterion benchmark suite for claims."
edition = "2018"
homepage = "https://minifunctions.com/"
license = "MIT OR Apache-2.0"
name = "claims-bench"
publish = false
repository = "https://github.com/sebastienrousseau/mini-functions"
version = "0.0.1"
workspace = ".."

[lib]
bench = false

[[bench]]
name = "claims-bench"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.4.0"
claims = { version = "*", path = ".." }